--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before-install: 
-  - docker build -t Rajk07/docker-react -f Dockerfile.dev .
+  - docker build -t rajk07/docker-react -f Dockerfile.dev .
 
 script: 
-  - docker run Rajk07/docker-react npm run test -- --coverage
+  - docker run rajk07/docker-react npm run test -- --coverage
