--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,5 @@ before-install:
   - docker build -t rajk07/docker-react -f Dockerfile.dev .
 
 script: 
-  - docker run rajk07/docker-react npm run test -- --coverage
+  #- docker run rajk07/docker-react npm run test -- --coverage
+  - docker run -e CI=true rajk07/docker-react npm run test
