--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,5 @@ deploy :
   on: 
     branch: master #when changes are don on master branch trigger deploy
   access_key_id: $AWS_ACCESS_KEY
-  secret_access_key: $AWS_SECRET_KEY
+  secret_access_key: 
+    secret: "$AWS_SECRET_KEY"
